--- a/css/index.css
+++ b/css/index.css
@@ -281,6 +281,7 @@
             gap: 26px; 
             margin-left: 80px;
             margin-right: 80px;
+            margin-top: 40px;
         }
 
         .listing {
