--- a/css/profile/profile-info.css
+++ b/css/profile/profile-info.css
@@ -2,18 +2,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    overflow: hidden;
 }
 
 .profile-info-section {
-    position: fixed;
+    position: sticky;
+    overflow: hidden;
     background-color: #29272F;
     background-image: url(/media/textures/grain-texture2.png);
     background-repeat: repeat;
     background-size: contain;
     background-size: 100px; 
     height: 75vh;
-    width: 250px;
+    width: 275px;
     border-radius: 15px;
     color: #F2F2F2;
 
@@ -21,51 +22,118 @@
 
     .profile-info-content {
 
+        padding: 10px;
+
         .profile-content {
 
             .profile-info {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .profile-credit {
+                    margin-bottom: 10px;
+                    color: #D6650F;
+                    font-weight: 600;
+                }
 
                 .avatar-container {
-                    width: 230px;
-                    height: 230px;
-                    padding: 10px;
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 999px;
+                    border: solid 1.5px #F2F2F2;
                 
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                        border-radius: 999px;
                     }
                 }
 
                 .name-email-bio {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                    width: 100%;
+                    align-items: center;
 
-                    .user-name{}
-                    .user-email{}
-                    .user-bio{}
+                    .user-name{
+                        font-size: 20px;
+                        margin-top: 20px;
+                        text-align: center;
+                    }
+                    .user-email{
+                        font-size: 16px;
+                        opacity: 65%;
+                        text-align: center;
+                        margin-top: -20px;
+                    }
+                    .user-bio{
+                        margin-bottom: 80px;
+                        width: 85%;
+                    }
                 }
             }
 
             .shortcut {
+                display: flex;
+                flex-direction: column;
+                color: #F2F2F2;
+                text-decoration: none;
+                margin-top: 20px;
+                font-size: 20px;
+                text-align: center;
 
-                a{}
+                &:hover{
+                    color: #81AB76;
+                    transition: 0.2s;
+                }
             }
+        }
 
-            .logout-content {
+        .logout-content {
+            position: relative;
+            width: 100%;
+            height: 20%;
+            .logout-button{
+                top: 100%;
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%);
+                height: 30px;
+                width: 80px;
+                border: solid 1.5px #F2F2F2;
+                border-radius: 10px;
+                background-color: #29272F;
+                color: #F2F2F2;
+                font-family: "Libre Bodoni", serif;
+                font-weight: 600;
 
-                .logout-button{}
+                &:hover {
+                    background-color: #D6650F;
+                    border-color: #D6650F;
+                    color:#29272F;
+                    transition: 0.2s;
+                    cursor: pointer;
+                }
             }
         }
     }
 }
 
 .right-side-sections {
-    margin-left: 290px;
-    margin-right: 10%;
+    overflow: hidden;
     height: 100%;
+    width: 100%;
+    margin-left: 80px;
     display: flex;
     flex-direction: column;
+    gap: 160px;
 
-    background-color: pink;
+    h2{
+        font-size: 35px;
+    }
 
     .credit-gift-section {
         margin-bottom: 80px;
@@ -75,17 +143,144 @@
 
     .users-listings-section {
 
+        width: 100%;
+
+        .user-listings-title {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            
+            .create-button {
+                height: 40px;
+                width: 160px;
+                background-color: #81AB76;
+                border-radius: 10px;
+                border: none;
+                color: #F2F2F2;
+                font-size: 18px;
+                font-family: "Libre Bodoni", serif;
+                i {
+                    margin-right: -10px;
+                    opacity: 0;
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    transition: 0.2s;
+                    background-color: #D6650F;
+
+                    i {
+                        transition: 0.2s;
+                        opacity: 1;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+
     }
 
-    .update-user-info {}
+    .update-user-info {
+        height: 100%;
+        padding-bottom: 360px;
+        width: 100%;
+        h2 {
+            margin-bottom: 80px;
+        }
+
+        .user-update-content {
+            display: flex;
+            flex-direction: column;
+            gap: 80px;
+            background-color: #29272F;
+            background-image: url(/media/textures/grain-texture2.png);
+            background-repeat: repeat;
+            background-size: contain;
+            background-size: 100px; 
+            padding: 20px;
+            border-radius: 25px;
+            color: #F2F2F2;
+        }
+
+        .update-profile {
+            display: flex;
+            flex-direction: row;
+            gap: 40px;
+            margin-top: 80px;
+        }
+
+        .update-left {
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            width: 50%;
+        }
+
+        .update-right {
+            width: 50%;
+
+            .update-bio {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                label {
+                    font-size: 20px;
+                }
+
+                .bio-text {
+                    width: 100%;
+                    height: 100%;
+                    min-height: 150px;
+                    color: #F2F2F2;
+                    border-radius: 15px;
+                    border: solid 1.5px #29272F;
+                }
+            }
+        } 
+    }
+
+    .update-avatar, .update-username {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        label {
+            font-size: 20px;
+        }
+
+        input {
+            height: 35px;
+            color: #F2F2F2;
+            border-radius: 15px;
+            border: solid 1.5px #29272F;
+        }
+    }
+
+    .save-button-content {
+        width: 100%;
+        display: flex;
+        justify-content: end;
+
+        .save-button {
+            background-color: #81AB76;
+            height: 35px;
+            border-radius: 10px;
+            border: none;
+            color:#F2F2F2;
+            font-size: 16px;
+            font-family: "Libre Bodoni", serif;
+
+            &:hover {
+                background-color: #D6650F;
+                cursor: pointer;
+                transition: 0.2s;
+            }
+        }
+    }
 }
-
-
-
-
-
-
-
 
 .popup {
     position: fixed;
