--- a/css/profile/profile-info.css
+++ b/css/profile/profile-info.css
@@ -31,7 +31,7 @@
                 flex-direction: column;
                 align-items: center;
 
-                .profile-credit {
+                .user-credit {
                     margin-bottom: 10px;
                     color: #D6650F;
                     font-weight: 600;
@@ -44,8 +44,8 @@
                     border: solid 1.5px #F2F2F2;
                 
                     img {
-                        width: 100%;
-                        height: 100%;
+                        width: 150px;
+                        height: 150px;
                         object-fit: cover;
                         border-radius: 999px;
                     }
