--- a/css/footer2.css
+++ b/css/footer2.css
@@ -103,6 +103,7 @@ footer {
         justify-content: space-evenly;
 
         height: 600px;
+        padding-bottom: 80px;
     
         .questions {
             width: 85%;
