--- a/css/index.css
+++ b/css/index.css
@@ -336,7 +336,7 @@
             font-size: 20px;
         }
 
-        .listing-description {
+        .description {
             font-size: 16px;
         }
 
@@ -733,15 +733,12 @@
             height: 225px;
         }
 
-        .listing-details {
-        }
-
         .listing-title {
             font-size: 17px;
         }
 
-        .listing-description {
-            font-size: 13px;
+        .description {
+            font-size: 14px;
         }
 
         .total-bids {
@@ -777,4 +774,179 @@
         width: calc(45% - 20px);
     }
 
+}
+
+@media (max-width: 700px) {
+    .middle-section-title {
+    
+        h2 {
+            font-size: 25px;
+        }
+    
+        .see-more-link {
+            width: 75px;
+            height: 35px;
+            font-size: 14px;
+    
+            a {
+                gap: 10px;
+            }
+
+            &:hover {
+                width: 95px;
+            }
+        }
+    }
+    .listing {
+        width: 80%;
+        .listing-content {
+            height: 450px;
+            .listing-media {
+                height: 300px;
+            }
+            .listing-details {
+                height: 145px;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .listing {
+        width: 80%;
+        .listing-content {
+            height: 400px;
+            .listing-media {
+                height: 250px;
+            }
+            .listing-details {
+                height: 145px;
+            }
+        }
+    }
+
+    .slider-buttons {
+    
+        .next-left, .next-right{
+            height: 30px;
+            width: 40px;
+        }
+    
+        .next-right {
+            &:hover {
+                margin-right: -10px;
+                transition: 0.2s;
+            }
+        }
+    
+        .next-left{
+            &:hover {
+                margin-left: -10px;
+                transition: 0.2s;
+            }
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .middle-section-title {
+        h2 {
+            font-size: 20px;
+        }
+    }  
+
+    .listing {
+        width: 90%;
+        .listing-content {
+            height: 375px;
+            .listing-media {
+                height: 225px;
+            }
+            .listing-details {
+                height: 145px;
+            }
+
+            .total-bids {
+                font-size: 14px;
+            }
+    
+            .listing-title {
+                font-size: 14px;
+            }
+    
+            .description {
+                font-size: 12px;
+            }
+        }
+
+        .listing-content::before {
+            width: 65%;
+        }
+
+        .see-listing {
+            width: 35%;
+            margin-left: 75%;
+            i {
+                font-size: 17px;
+            }
+        }
+
+        &:hover {
+
+            .see-listing {
+                margin-left: 79%;
+            }
+        }
+        
+    }
+}
+
+@media (max-width: 350px) {
+    .newest-listings {
+        margin-left: 0px;
+        margin-right: 10px; 
+    }
+
+    .listing {
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        .listing-content {
+            height: 375px;
+            width: 100%;
+            border-radius: 25px 25px 0px 0px;
+        }
+        .listing-content::before {
+            width: 100%;
+        }
+        .see-listing {
+            display: none;
+        }
+    }
+
+    .slider-buttons {
+        align-items: end;
+        height: 90%;
+        width: 45%;
+        margin-left: 50%;
+        transform: translate(-50%);
+        .next-left, .next-right{
+            height: 25px;
+            width: 35px;
+        }
+    
+        .next-right {
+            &:hover {
+                margin-right: -10px;
+                transition: 0.2s;
+            }
+        }
+    
+        .next-left{
+            &:hover {
+                margin-left: -10px;
+                transition: 0.2s;
+            }
+        }
+    }
 }
