--- a/css/listings/all-listings.css
+++ b/css/listings/all-listings.css
@@ -1,25 +1,10 @@
-main {
-    height: 100%;
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.margin-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 40px;
-    height: 100%;
-}
-
 .all-listings-section {
 
     width: 100%;
+    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
-    min-height: 0;
 
     .listings-top-filters {
         display: flex;
@@ -342,7 +327,8 @@ main {
     .all-listings-section {
         .all-listings {
             .listing {
-                width: calc(50% - 20px);
+                width: calc(45% - 20px);
+                aspect-ratio: 2 / 2.4;
                 .listing-content {
                     .listing-title {
                         font-size: 2vw;
@@ -357,25 +343,3 @@ main {
     }
 }
 
-@media (max-width: 930px) {
-    .all-listings-section {
-        .all-listings {
-            align-items: center;
-            justify-content: center;
-
-            .listing {
-                width: calc(100% - 160px);
-                aspect-ratio: 1.2 / 1.4;
-                .listing-content {
-                    .listing-title {
-                        font-size: 2vw;
-                    }
-                    .total-bids {
-                        font-size: 2vw;
-                    }
-                }
-            }
-        }
-
-    }
-}
