--- a/css/listings/all-listings.css
+++ b/css/listings/all-listings.css
@@ -47,6 +47,7 @@
         justify-content: space-between;
         margin-bottom: 40px;
         height: 30px;
+        width: 100%;
 
         .popular-tags {
             display: flex;
@@ -340,6 +341,18 @@
             }
         }
 
+    }
+}
+
+@media (max-width: 990px) {
+    .all-listings-section {
+        width: 95%;
+    }
+}
+
+@media (max-width: 900px) {
+    .all-listings-section {
+        width: 90%;
     }
 }
 
