--- a/css/listings/all-listings-body-footer.css
+++ b/css/listings/all-listings-body-footer.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     height: 100%;
+    width: 100%;
     overflow-x: hidden;
     background-color: #EBEEE9;
     font-family: "Libre Bodoni", serif;
@@ -14,7 +15,6 @@ body {
 
 main {
     width: 100%;
-    min-width: 100vh;
     height: 100%;
     padding-bottom: 100%;
     position: relative;
@@ -96,6 +96,7 @@ footer {
 
 /*body, main and margin-section*/
 
+
 @media (max-width: 990px) {
     .margin-section {
         margin-left: 5%;
@@ -103,6 +104,7 @@ footer {
         width: 90%;
     }
 }
+
 
 @media (max-width: 1300px) {
     main {
