finished with all-listings?

--- a/css/listings/all-listings-body-footer.css
+++ b/css/listings/all-listings-body-footer.css
@@ -16,7 +16,7 @@ body {
 main {
     width: 100%;
     height: 100%;
-    padding-bottom: 100%;
+    padding-bottom: 80%;
     position: relative;
     background-color: rgba(255, 192, 203, 0);
 }
@@ -104,11 +104,14 @@ footer {
         width: 90%;
     }
 }
-
-
 @media (max-width: 1300px) {
     main {
         padding-bottom: 80%;
+    }
+}
+@media (max-width: 490px) {
+    main {
+        height: 250vh;
     }
 }
 
@@ -164,9 +167,30 @@ footer {
         }
     }
 }
-
 @media (max-width: 490px) {
-    main {
-        height: 250vh;
+    footer {
+        padding-bottom: 120px;
+
+        .footer-links {
+            margin-top:30px;
+            width: 90%;
+    
+            justify-content: space-evenly;
+    
+            .about, .services, .contact {
+                .footer-links-title {
+                    font-size: 15px;
+                }
+    
+                a {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 299px) {
+    footer {
+        padding-bottom: 150px;
     }
 }
