--- a/css/listings/create-listing.css
+++ b/css/listings/create-listing.css
@@ -9,12 +9,11 @@ main {
     margin-top: 140px;
     color: #29272F;
 }
-
 .preview-section {
 
     width: 40%;
     height: 80vh;
-
+}
 .preview-listing {
     width: 100%;
     height: 100%;
@@ -30,144 +29,200 @@ main {
     flex-direction: column;
     margin-top: 0px;
     padding-top: 0px;
-
-    .preview-media {
-        width: 95%;
-        height: 100%;
-        max-height: 450px;
-        margin-top: 0px;
-        border-radius: 15px;
-        padding: 10px;
-
-        img {
-            margin-top: 0px;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 15px;
-        }
-    }
-
-    .preview-listing-content{ 
-
-        width: 90%;
-        margin-left: 5%;
-        margin-right: 5%;
-
-        .preview-title{
-            font-size: 25px;
-            font-weight: 600;
-            margin-bottom: 20px;
-            margin-top: 20px;
-            margin-left: 0px;
-            margin-right: 0px;
-        }
-
-        .preview-description {
-            font-size: 17px;
-            margin-bottom: 50px;
-        }
-
-        .preview-tags {
-            display: flex;
-            flex-direction: row;
-            gap: 15px;
-            margin-bottom: 10px;
-        }
-
-        .preview-ends {
-            opacity: 75%;
-        }
-    }
-  }  
 }
+.preview-media {
+    width: 95%;
+    height: 100%;
+    max-height: 450px;
+    margin-top: 0px;
+    border-radius: 15px;
+    padding: 10px;
 
+    img {
+        margin-top: 0px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+    }
+}
+.preview-listing-content{ 
+
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+
+    .preview-title{
+        font-size: 25px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .preview-description {
+        font-size: 17px;
+        margin-bottom: 50px;
+    }
+
+    .preview-tags {
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        margin-bottom: 10px;
+    }
+
+    .preview-ends {
+        opacity: 75%;
+    }
+}
 .create-section {
     height: 80vh;
     width: 60%;
-
     margin-left: 5%;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-
     h1 {
         font-size: 30px;
         font-weight: 700;
 
     }
+}
+.create-form {
 
-    .create-form {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 
+    width: 100%;
+
+    label {
+        font-weight: 600;
         display: flex;
         flex-direction: column;
-        gap: 25px;
+        margin-bottom: 5px;
+    }
 
+    input {
+        width: 75%;
+        background-color: #F2F2F2;
+        border: solid 1.5px #29272F;
+        border-radius: 100px;
+        padding: 5px;
+
+        &[type="text"]::placeholder, &[type="url"]::placeholder{
+            color: #29272F;
+        }
+    }
+
+    textarea {
+        width: 75%;
+        height: 150px;
+        background-color: #F2F2F2;
+        border: solid 1.5px #29272F;
+        border-radius: 15px;
+        padding: 5px;
+
+        &::placeholder {
+            color: #29272F;
+        }
+    }
+
+    .ends-at {
+
+        input{
+            width: 200px;
+        }
+    }
+
+}
+.submit-button {
+    background-color: #D6650F;            
+    color: #F2F2F2;
+    padding: 10px;
+    margin-top: 80px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 600;
+    font-family: "Libre Bodoni", serif;
+    width: 150px;
+    border: none;
+
+    &:hover {
+        cursor: pointer;
+        transition: 0.2s;
+        background-color: #29272F;
+        background-image: url(/media/textures/grain-texture2.png);
+        background-repeat: repeat;
+        background-size: contain;
+        background-size: 100px; 
+    }
+}
+
+@media (max-width: 990px) {
+    .create-section {
+        margin-right: 0%;
+    }
+    .preview-section {
+        width: 50%;
+        height: 80vh;
+    }
+}
+
+@media (max-width: 800px) {
+    main {
+        flex-direction: column-reverse;
+        padding-bottom: 30%;
+    } 
+    .create-section {
+        margin-left: 0%;
         width: 100%;
-
-        label {
-            font-weight: 600;
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 5px;
-        }
-
-        input {
-            width: 75%;
-            background-color: #F2F2F2;
-            border: solid 1.5px #29272F;
-            border-radius: 100px;
-            padding: 5px;
-
-            &[type="text"]::placeholder, &[type="url"]::placeholder{
-                color: #29272F;
-            }
-        }
-
-        textarea {
-            width: 75%;
-            height: 150px;
-            background-color: #F2F2F2;
-            border: solid 1.5px #29272F;
-            border-radius: 15px;
-            padding: 5px;
-
-            &::placeholder {
-                color: #29272F;
-            }
-        }
-
-        .ends-at {
-
-            input{
-                width: 200px;
-            }
-        }
-
+        margin-bottom: 40px;
     }
-
+    .preview-section {
+        width: 100%;
+        height: 80vh;
+    }
     .submit-button {
-        background-color: #D6650F;            
-        color: #F2F2F2;
-        padding: 10px;
-        margin-top: 80px;
-        border-radius: 5px;
-        font-size: 15px;
-        font-weight: 600;
-        font-family: "Libre Bodoni", serif;
-        width: 150px;
+        margin-top: 40px;
+    }
+}
 
-        &:hover {
-            cursor: pointer;
-            transition: 0.2s;
-            background-color: #29272F;
-            background-image: url(/media/textures/grain-texture2.png);
-            background-repeat: repeat;
-            background-size: contain;
-            background-size: 100px; 
+@media (max-width: 680px) {
+
+    .create-form {    
+        input {
+            width: 95%;
+        }
+        textarea {
+            width: 95%;
+        }    
+    }
+}
+
+@media (max-width: 450px) {
+
+    .preview-listing-content{ 
+        .preview-title{
+            font-size: 20px;
+        }
+        .preview-description {
+            font-size: 14px;
+            margin-bottom: 30px;
+        }
+        .preview-tags {
+            gap: 10px;
         }
     }
+}
 
+@media (max-width: 380px) {
+    .create-section {
+        h1 {
+            font-size: 25px;
+        }
+    } 
 }
